# eggstraction

./: .dockerignore  Cargo.toml  Dockerfile  README.md  alltests.txt  cost_model.json  symbol_types.json  test.txt  tests.txt  wrapper.py
inputs/: benchmarks.txt  symbol_types.json  tests.txt
src/: analysis.rs  cost.rs  extractor_structures.rs  faster_greedy_dag.rs  faster_ilp_cbc.rs  greedy_dag.rs  language.rs  main.rs  rules.rs
