[package]
name = "eggstraction"
version = "0.1.0"
edition = "2024"

[dependencies]
egg = { version = "0.10.0", features = ["lp"] }
ordered-float = "3.7.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"

rustc-hash = "2.1.1"
indexmap = "2.0.0"
coin_cbc = "0.1.8"
log = "0.4.27"

[dependencies.egraph-serialize]
git = "https://github.com/egraphs-good/egraph-serialize"
rev = "951b829a434f4008c7b45ba4ac0da1037d2da90"
